<resources>
    <string name="app_name">Car Maintenance</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="vehicle_info">Información del Vehículo</string>
    <string name="mileage_info">Información Kilometraje</string>
    <string name="maintenance_new">Añadir Mantenimiento</string>

    <!-- SETTINGS STRINGS -->
    <string name="str_marca">Marca</string>
    <string name="str_marca_ejm">Ejm: Chevrolet</string>
    <string name="str_modelo">Modelo</string>
    <string name="str_model_ejm">Ejm: Optra 1.8L T/M LIMITED</string>
    <string name="str_clase">Clase vehículo</string>
    <string name="str_clase_ejm">Ejm: Automovil</string>
    <string name="str_tipo">Tipo vehículo</string>
    <string name="str_tipo_ejm">Ejm: Sedan</string>
    <string name="str_placa">Placa</string>
    <string name="str_placa_ejm">Ejm: POM0200</string>
    <string name="str_color">Color</string>
    <string name="str_color_ejm">Ejm: Rojo</string>
    <string name="str_anio">Año</string>
    <string name="str_anio_ejm">Ejm: 2006</string>
    <string name="str_km_actual">Kilometraje actual</string>
    <string name="str_km_ejm">35252 km</string>
    <string name="str_km_estimado_dia">Kilometraje/día estimado</string>
    <string name="str_km_estimado">Kilometraje estimado del sistema</string>
    <string name="title_activity_maintenance">MaintenanceActivity</string>

    <!-- MAINTENANCE STRINGS -->
    <string name="str_maintenance_name">Name</string>
    <string name="str_maintenance_date">Fecha</string>
    <string name="str_maintenance_description">Descripción</string>
    <string name="str_maintenance_miliage">Kilometraje actual</string>
    <string name="str_maintenance_miliage_next">Kilometraje próximo cambio</string>
    <string name="title_activity_type_maintenance">TypeMaintenance</string>

    <string name="str_save">Guardar</string>
</resources>
