<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.semillasec.carmaintenance.MaintenanceActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/maintenance_new"
                android:id="@+id/textView14"
                android:singleLine="false"
                android:password="false"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="#ff911024"
                android:textSize="25sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_maintenance_name"
                android:id="@+id/textView12"
                android:textColor="#ff15914a"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_maintenance_date"
                android:id="@+id/textView13"
                android:textColor="#ff15914a"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
